[package]
name = "vapour"
authors = ["Eemeli Lehtonen"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
clap = { version = "4.2", features = ["derive", "color"] }
clap_complete = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
owo-colors = "3.5"
once_cell = "1.17"
bincode = "1.3"
regex = "1.8"
is-terminal = "0.4"

[dev-dependencies]
insta = "1.29"

[build-dependencies]
# clap = { version = "4.2", features = ["derive", "color"] }
# clap_complete = "4.2"
