[package]
name = "vapour"
description = "general purpose cli tool for Steam related tasks"
authors = ["Eemeli Lehtonen"]
license-file = "LICENSE"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
directories = "5.0"
clap = { version = "4.2", features = ["derive", "color"] }
clap_complete = "4.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tracing-subscriber = "0.3"
owo-colors = "4.0"
regex = "1.8"
sled = "0.34"
indicatif = "0.17"
tokio = { version = "1.37", features = ["rt", "macros"] }

[dev-dependencies]
insta = "1.29"

[build-dependencies]
# clap = { version = "4.2", features = ["derive", "color"] }
# clap_complete = "4.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
